--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
-  </head>
-  
-  <body>
-    <h1>Hello, world!</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="assets/styles/styles.css">
+
+  <title>REPAM | Reactivación Economica para Agricultores Méxicanos</title>
+</head>
+
+<body class="landing">
+  <header class="header">
+    <nav class="navbar">
+      <a href="#" class="nav-logo"><img class="logo" src="assets/images/logo_hack_official.png" width="260px"
+          height="66px"></a>
+      <ul class="nav-menu">
+        <li class="nav-item">
+          <a href="navbar/servicios.html" class="nav-link">Servicios</a>
+        </li>
+        <li class="nav-item">
+          <a href="navbar/blog.html" class="nav-link">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a href="navbar/contaco.html" class="nav-link">Contacto</a>
+        </li>
+      </ul>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+    </nav>
+  </header>
+
+  <div align="center" style="margin-top: 9%;">
+
+    <form action="" method="post">
+      <h1>Bienvenidos</h1>
+
+      <div style="margin-top: 2%">
+        <input class="form-control" type="email" placeholder="Correo" style="width: 20rem;" /><br>
+        <input class="form-control mb-2" type="password" placeholder="Contraseña" style="width: 20rem;" />
+      </div>
+
+      <a href="#">¿No recuedas tu contraseña?</a><br><br>
+      <input type="submit" class="btn btn-success" value="Enviar" />
+    </form>
+
+    <br>
+    <a href="#">Registrate aquí</a>
+
+  </div>
+
+</body>
+
 </html>
