--- a/registro.html
+++ b/registro.html
@@ -14,7 +14,7 @@
 
     <header class="header">
             <nav class="navbar">
-                <a href="#" class="nav-logo"><img class="logo" src="imagenes/logo_hack_official.png" width="260px" height="66px"></a>
+                <a href="index.html" class="nav-logo"><img class="logo" src="imagenes/logo_hack_official.png" width="260px" height="66px"></a>
                 <ul class="nav-menu">
                     <li class="nav-item">
                         <a href="navbar/blog.html" class="nav-link">Blog</a>
@@ -44,16 +44,26 @@
             <h1>Bienvenidos</h1>
 
             <div align="center" style="margin-top: 2%" >
-                <input  class="form-control" type="email" placeholder="Correo" style="width: 20rem;"/><br><br></i>
-                <input  class="form-control mb-2" type="password" placeholder="Contraseña" style="width: 20rem;"/><br><br>
+                    
+                <div class="row">
+                    <div class="col">
+
+                        <input type="text" class="form-control" placeholder="Nombres" style="width: 20rem;"><br>
+                        <input type="text" class="form-control" placeholder="Apellido Paterno" style="width: 20rem;"><br>
+                        <input type="text" class="form-control" placeholder="Apellido Materno" style="width: 20rem;"><br>
+                        <input type="tel" class="form-control" placeholder="Teléfono" style="width: 20rem;"><br>
+                        <input type="email" class="form-control" placeholder="Correo" style="width: 20rem;"><br>
+                        <input type="password" class="form-control" placeholder="Contraseña" style="width: 20rem;"><br>
+
+                    </div>
+                </div>
+                          
             </div>
 
-            <a href="recuperar_contrasena.html">¿No recuedas tu contraseña?</a><br><br>
             <input type="submit" class="btn btn-success" value="Enviar"/>
         </form>
 
         <br>
-        <a href="registro.html">Registrate aquí</a><br><br>
 
 
     </div>
