--- a/recuperar_contrasena.html
+++ b/recuperar_contrasena.html
@@ -39,21 +39,23 @@
     
     <div align="center" style="margin-top: 9%" > 
 
-        <form action="menu_agricultor/menu_agricultor.html" method="post">
+        <form action="index.html" method="post">
             
-            <h1>Bienvenidos</h1>
+            <h1>¿Cuál es tu correo?</h1>
 
             <div align="center" style="margin-top: 2%" >
                 <input  class="form-control" type="email" placeholder="Correo" style="width: 20rem;"/><br><br></i>
-                <input  class="form-control mb-2" type="password" placeholder="Contraseña" style="width: 20rem;"/><br><br>
             </div>
 
-            <a href="recuperar_contrasena.html">¿No recuedas tu contraseña?</a><br><br>
-            <input type="submit" class="btn btn-success" value="Enviar"/>
-        </form>
+            <input type="submit" class="btn btn-success" onclick="clicked();" value="Enviar"/><br><br>
+                    <script type="text/javascript">
+                        function clicked() {
+                            alert('Tu nueva contraseña ha sido mandada al correo que nos proporcionaste.');
+                        }
+                    </script>
 
-        <br>
-        <a href="registro.html">Registrate aquí</a><br><br>
+
+        </form>
 
 
     </div>
